# percolation

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  a.cpp  archive.sh  classify.h  collectdata.py  compile.sh  data2py.py  main.cpp  myperc.pro  ndarray.h  percolation.h  percolation.pro  runtask.py  save2dimg.h  single.sh  test.cpp  wrapper.py  wrapping.h  zonebond.h
deploy/: collectdata.py  compile.sh  single.sh
lib/: 16807.cpp  16807.h  deque.cpp  deque.h  graph.cpp  graph.h  iter.cpp  iter.h  linklist.h  nbond.h  ndarray.cpp  ndarray.h  nditer.h  save2dimg.h  singlelist.h  test.cpp  test.h  wrapping.h  zone.h  zonebond.h
lib/misc/: nditer.h  test.cpp  test.h
